--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -176,6 +176,10 @@
             android:name="com.pingpong.DownloadActivity"
             android:theme="@style/AppTheme.Nobar" />
 
+        <meta-data
+            android:name="com.google.android.gms.ads.APPLICATION_ID"
+            android:value="@string/admob_appid"/>
+
     </application>
 
 </manifest>
