--- a/app/build.gradle
+++ b/app/build.gradle
@@ -69,17 +69,17 @@ dependencies {
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
 
     //firebase
-    implementation 'com.google.firebase:firebase-analytics:17.4.4'
-    implementation 'com.google.firebase:firebase-messaging:20.2.3'
-    implementation 'com.google.firebase:firebase-dynamic-links:19.1.0'
-    implementation 'com.google.firebase:firebase-firestore:17.1.5'
-
-    //firebase auth
+    implementation platform('com.google.firebase:firebase-bom:26.4.0')
+    implementation 'com.google.firebase:firebase-analytics'
+    implementation 'com.google.firebase:firebase-messaging'
+    implementation 'com.google.firebase:firebase-dynamic-links'
+    implementation 'com.google.firebase:firebase-firestore'
     implementation 'com.firebaseui:firebase-ui-auth:6.2.1'
-    implementation "com.google.firebase:firebase-auth:20.0.1"
-    implementation 'com.google.firebase:firebase-crashlytics:17.2.2'
-    implementation 'com.facebook.android:facebook-android-sdk:5.12.1'
+    implementation "com.google.firebase:firebase-auth"
+    implementation 'com.google.firebase:firebase-crashlytics'
+    implementation 'com.google.android.gms:play-services-ads:19.7.0'
 
+    implementation 'com.facebook.android:facebook-android-sdk:5.12.1'
     implementation 'com.google.android.material:material:1.2.1'
     implementation 'com.crystal:crystalrangeseekbar:1.1.3'
     implementation 'androidx.vectordrawable:vectordrawable:1.1.0'
@@ -143,4 +143,5 @@ dependencies {
     implementation 'com.github.florent37:shapeofview:1.4.7'
     implementation 'io.reactivex.rxjava2:rxandroid:2.0.2'
     implementation 'com.razorpay:checkout:1.5.12'
+
 }
