--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,8 +29,8 @@ android {
         applicationId "com.pingpongentertainment.ott"
         minSdkVersion 21
         targetSdkVersion 29
-        versionCode 51
-        versionName "1.23"
+        versionCode 53
+        versionName "1.25"
         multiDexEnabled true
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         vectorDrawables.useSupportLibrary = true
@@ -62,6 +62,9 @@ android {
 
 }
 
+def exoplayerVersion = '2.12.2'
+def imaVersion = '2.11.1'
+
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'androidx.appcompat:appcompat:1.2.0'
@@ -78,8 +81,8 @@ dependencies {
     implementation "com.google.firebase:firebase-auth"
     implementation 'com.google.firebase:firebase-crashlytics'
     implementation 'com.google.android.gms:play-services-ads:19.7.0'
-
     implementation 'com.facebook.android:facebook-android-sdk:5.12.1'
+
     implementation 'com.google.android.material:material:1.2.1'
     implementation 'com.crystal:crystalrangeseekbar:1.1.3'
     implementation 'androidx.vectordrawable:vectordrawable:1.1.0'
@@ -124,13 +127,15 @@ dependencies {
     implementation 'com.mikhaellopez:circularimageview:4.0.0'
     implementation 'de.hdodenhof:circleimageview:3.1.0'
     // exo player
-    implementation 'com.google.android.exoplayer:exoplayer-core:2.11.4'
-    implementation 'com.google.android.exoplayer:exoplayer-dash:2.11.4'
-    implementation 'com.google.android.exoplayer:exoplayer-ui:2.11.4'
-    implementation 'com.google.android.exoplayer:exoplayer-hls:2.11.4'
-    implementation 'com.google.android.exoplayer:extension-rtmp:2.11.4'
-    implementation 'com.google.android.exoplayer:extension-cast:2.11.4'
-    implementation 'com.google.android.exoplayer:exoplayer-smoothstreaming:2.11.4'
+    implementation "com.google.android.exoplayer:exoplayer-core:${exoplayerVersion}"
+    implementation "com.google.android.exoplayer:exoplayer-dash:${exoplayerVersion}"
+    implementation "com.google.android.exoplayer:exoplayer-ui:${exoplayerVersion}"
+    implementation "com.google.android.exoplayer:exoplayer-hls:${exoplayerVersion}"
+    implementation "com.google.android.exoplayer:extension-rtmp:${exoplayerVersion}"
+    implementation "com.google.android.exoplayer:extension-cast:${exoplayerVersion}"
+    implementation "com.google.android.exoplayer:exoplayer-smoothstreaming:${exoplayerVersion}"
+    implementation "com.google.android.exoplayer:extension-ima:${imaVersion}"
+
     implementation 'com.github.HaarigerHarald:android-youtubeExtractor:master-SNAPSHOT'
     implementation 'com.google.android.libraries.cast.companionlibrary:ccl:2.8.4'
     //bottom navigation
@@ -143,5 +148,4 @@ dependencies {
     implementation 'com.github.florent37:shapeofview:1.4.7'
     implementation 'io.reactivex.rxjava2:rxandroid:2.0.2'
     implementation 'com.razorpay:checkout:1.5.12'
-
 }
